--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<
+		<meta name="viewport" width="device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<style type="text/css">
 			html, body { height: 100%; margin: 0; padding: 0; }
 			#map { height: 100%; }
 		</style>
+
 	</head>
 	<body>
-		<div id="map"></div>
+		<div class="container" style="width:100%; height:100%">
+			<div class="row" style="height: 100%">
+				<div class="col-md-9 col-sm-8" style="height: 100%">
+					<div id="map"></div>	
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="js/bootstrap.min.js" async></script>
 		<script type="text/javascript" src="js/knockout-3.3.0.js" async></script>
 		<script type="text/javascript" src="js/app.js" async></script>
 
