--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Ken Ng's Neighborhood Map Project</title>
 		<meta name="viewport" width="device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -11,13 +12,47 @@
 
 	</head>
 	<body>
-		<div class="container" style="width:100%; height:100%">
-			<div class="row" style="height: 100%">
-				<div class="col-md-9 col-sm-8" style="height: 100%">
-					<div id="map"></div>	
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">Brand</a>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+						<li><a href="#">Link</a></li>
+					</ul>
+					<form class="navbar-form navbar-left" role="search">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Search">
+						</div>
+						<button type="submit" class="btn btn-default">Submit</button>
+					</form>
 				</div>
 			</div>
+		</nav>
+
+
+		<div class="container" style="width:100%; height:100%">
+			<div class="row" style="height: 100%">
+				<div class="col-md-9 col-sm-8" style="height: 100%; padding: 0;">
+					<div id="map"></div>
+				</div>
+				<div class="col-md-3 col-sm-4">
+					<ul data-bind="foreach: placesArray">
+						<li data-bind="text: placeResult.name"></li>
+					</ul>
+				</div>
+			</div>
+
 		</div>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js" async></script>
 		<script type="text/javascript" src="js/knockout-3.3.0.js" async></script>
 		<script type="text/javascript" src="js/app.js" async></script>
