--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	</head>
 	<body>
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default" style="margin: 0;">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -39,8 +39,8 @@
 		</nav>
 
 
-		<div class="container" style="width:100%; height:100%">
-			<div class="row" style="height: 100%">
+		<div class="container-fluid" style="width:100%; height:100%">
+			<div class="row" style="position: fixed; top: 50px; bottom: 0px; width: 100%;">
 				<div class="col-md-9 col-sm-8" style="height: 100%; padding: 0;">
 					<div id="map"></div>
 				</div>
