--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	</head>
 	<body>
-		<nav class="navbar navbar-default" style="margin: 0;">
+		<nav class="navbar navbar-default" style="margin: 0; z-index: 1">
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -21,7 +21,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Brand</a>
+					<a class="navbar-brand" href="#">Ken's Map</a>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
@@ -39,14 +39,21 @@
 		</nav>
 
 
-		<div class="container-fluid" style="width:100%; height:100%">
-			<div class="row" style="position: fixed; top: 50px; bottom: 0px; width: 100%;">
-				<div class="col-md-9 col-sm-8" style="height: 100%; padding: 0;">
+		<div class="container-fluid" style="position: fixed; top: 55px; bottom: 0px; width: 100%;">
+			<div class="row" style="">
+				<div class="col-md-9 col-sm-8" style="position:absolute; top: 0; bottom:0; padding: 0;">
 					<div id="map"></div>
 				</div>
-				<div class="col-md-3 col-sm-4">
-					<ul data-bind="foreach: placesArray">
-						<li data-bind="text: placeResult.name"></li>
+				<div class="col-md-offset-9 col-sm-offset-8 col-md-3 col-sm-4" style="position:absolute; top: 0; bottom: 0">
+					<ul data-bind="foreach: placesArray" class="list-unstyled">
+						<li>
+							<div class="panel panel-default">
+								<div class="panel-heading" data-bind="text: placeResult.name"></div>
+								<div class="panel-body">
+									Hello
+								</div>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
