--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				</div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li><a href="#">Link <span class="sr-only">(current)</span></a></li>
-						<li><a href="#">Link</a></li>
+						<li><a href="#">Options <span class="sr-only">(current)</span></a></li>
+						<li><a data-target="#optionsModal" data-toggle="modal" href="#">Link</a></li>
 					</ul>
 					<form class="navbar-form navbar-left" role="search">
 						<div class="form-group">
@@ -50,7 +50,7 @@
 							<div class="panel panel-default">
 								<div class="panel-heading" data-bind="text: placeResult.name"></div>
 								<div class="panel-body" data-bind="text: placeResult.vicinity">
-									
+
 								</div>
 							</div>
 						</li>
@@ -82,6 +82,25 @@
 								<a data-bind="text: name, attr: {href: link}"></a>, <span data-bind="text: desc"></span>
 							</li>
 						</ul>
+
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="modal fade" id="optionsModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="optionsLabel" style="display: inline">Ken's Map Options</h4>
+					</div>
+					<div class="modal-body">
+
 
 					</div>
 					<div class="modal-footer">
