Add click event to map marker to open modal

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</div>
 						<ul class="list-unstyled" data-bind="visible: isWikiLoaded() && !isWikiFailed(), foreach: wikiInformation">
 							<li>
-								<a data-bind="text: name, attr: {href: link}"></a>, <span data-bind="text: desc"></span>
+								<a target="_blank" data-bind="text: name, attr: {href: link}"></a>, <span data-bind="text: desc"></span>
 							</li>
 						</ul>
 
