Made scripts not async

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js" async></script>
-		<script type="text/javascript" src="js/knockout-3.3.0.js" async></script>
-		<script type="text/javascript" src="js/json2.js" async></script>
-		<script type="text/javascript" src="js/app.js" async></script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/knockout-3.3.0.js"></script>
+		<script type="text/javascript" src="js/json2.js"></script>
+		<script type="text/javascript" src="js/app.js"></script>
 
 		<script async defer
 			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPQb5Rww_wcIz5VbhbpX55AARXlc_E7dU&callback=initialize&libraries=places">
