Add Modal for if Address returns multiple hits

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<img data-bind="attr: {src: imageUrl}">
 						<h4>Information</h4>
 						<p data-bind="text: placeResult.vicinity"></p>
-						<p data-bind="visible: placeResult.opening_hours.open_now">Open Now!</p>
+						<p data-bind="visible: placeResult.opening_hours && placeResult.opening_hours.open_now">Open Now!</p>
 						<br>
 						<div data-bind="visible: !isWikiFailed()">
 							<h4>Wikipedia Information</h4>
@@ -119,7 +119,7 @@
 		</div>
 
 
-		<div class="modal fade" id="optionsModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal fade" id="optionsModal" tabindex="-1" role="dialog" aria-labelledby="optionsLabel">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -130,7 +130,7 @@
 						<div style="display: block">
 							<label for="input-map-range">Range</label><input id="input-map-range" type="number" data-bind="value: range">
 						</div>
-						<ul class="list=unstyled" data-bind="foreach: placeTypePrefs">
+						<ul class="list-unstyled" data-bind="foreach: placeTypePrefs">
 							<div style="display:inline-block; width: 30%">
 								<input type="checkbox" data-bind="checked: isSelected"><label data-bind="text: name"></label>
 							</div>
@@ -143,6 +143,24 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="modal fade" id="locationsPickerModal" tabindex="-1" role="dialog" aria-labelledby="locationsLabel">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="locationsLabel">Please pick one</h4>
+					</div>
+				<div class="modal-body">
+					<ul class="list-unstyled" data-bind="foreach: partialAddressList">
+						<li>
+							<h4 data-bind="text: formatted_address, click: $root.selectNewAddress"></h4>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
