--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<style type="text/css">
 			html, body { height: 100%; margin: 0; padding: 0; }
-			#map { height: 100%; }
+			#map { height: 100%; margin-left: 20px;}
+			#map-container { position:absolute; top: 0; bottom:0; right: 20px; padding: 0; }
+			#side-panel { display:none; position:absolute; top: 0; bottom: 0; overflow-y: scroll;}
+			#side-panel-open-btn { background:url(img/triangle-left.png) no-repeat center center; background-color: lightgray; position:absolute; top: 0; right: 0; bottom: 0; width: 20px; }
 		</style>
 
 	</head>
@@ -40,13 +43,15 @@
 
 		<div class="container-fluid" style="position: fixed; top: 55px; bottom: 0px; width: 100%;">
 			<div class="row" style="">
-				<div class="col-md-9 col-sm-8" style="position:absolute; top: 2px; bottom:0; padding: 0; ">
+				<div id="map-container" class="col-md-12 col-sm-12 col-xs-12">
 					<div id="map"></div>
 				</div>
-				<div class="col-md-offset-9 col-sm-offset-8 col-md-3 col-sm-4" style="position:absolute; top: 2px; bottom: 0; overflow-y: scroll;">
+				<div id="side-panel-open-btn"></div>
+				<div id="side-panel" class="col-md-offset-9 col-sm-offset-8 col-md-3 col-sm-4">
+					<input id="close-panel-btn" type="image" src="img/close.png" style="margin: 5px; background-color: white; padding: 2px; border-radius: 15px; border: 2px solid black;">
 					<h3>Nearby Places</h3>
 					<div class="input-group">
-						<span class="input-group-btn">
+						<span class="input-group-btn" class="img-responsive">
 							<button class="btn btn-default" type="button" data-bind="click: filterPlaces">Go!</button>
 						</span>
 						<input type="text" class="form-control" placeholder="Search for..." data-bind="textInput: searchTerm">
@@ -72,6 +77,7 @@
 			</div>
 
 		</div>
+
 
 		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 			<div class="modal-dialog" role="document" data-bind="visible: currentPlace(), with: currentPlace()">
