--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Ken Ng's Neighborhood Map Project</title>
-		<meta name="viewport" width="device-width, initial-scale=1">
+		<meta name="viewport" width="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<style type="text/css">
@@ -77,7 +77,7 @@
 						<p>Unable to reach Google Places...</p>
 					</div>
 					<ul data-bind="visible: !isLoading(),foreach: placesFilteredArray()" class="list-unstyled">
-						<li data-toggle="modal" data-target="#myModal" data-bind="click: $root.selectPlace">
+						<li data-toggle="modal" data-target="#myModal" data-bind="click: $root.selectPlace, event: {mouseover: animateMarker, mouseout: stopAnimation}">
 							<div class="panel panel-default">
 								<div class="panel-heading" >
 									<span data-bind="text: placeResult.name"></span>
