--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/knockout-3.3.0.js"></script>
 		<script type="text/javascript" src="js/json2.js"></script>
+		<script type="text/javascript" src="js/MapOptions.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 
 		<script async defer
