--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
 		<script type="text/javascript" src="js/knockout-3.3.0.js"></script>
 		<script type="text/javascript" src="js/json2.js"></script>
 		<script type="text/javascript" src="js/MapOptions.js"></script>
+		<script type="text/javascript" src="js/MapPlace.js"></script>
+		<script type="text/javascript" src="js/UserData.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 
 		<script async defer
