Fix bug where info window stop appearing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Ken Ng's Neighborhood Map Project</title>
-		<meta name="viewport" width="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<meta name="viewport" width="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/style.css">
